# uriel02-priceapi

./: README.md  pyproject.toml
src/priceapi/: __init__.py  adapter.py  api.py
src/priceapi/models/: __init__.py  price.py
